outputs/main/hsevo-qd_cvrp_aco_2025-06-09_17-59-37/problem_iter12_response0.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/cvrp_aco/eval.py", line 11, in <module>
    import gpt
  File "/home/dokhanhnam1199/QD/problems/cvrp_aco/gpt.py", line 67
    median_val = np.median(col[col > 0]) if np.any(col > 0] else 0
                                                          ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('
70
28
1356.4806399138326
